src/sharedstyles.css
#map {
  height: 100px;
  position: inherit !important;
}

.dropdown {
  display: inline-block;
  position: relative;
}

.dropdownContent {
  position: absolute;
  min-width: 200px;
  overflow: auto;
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
  padding: 12px 16px;
  border-radius: 10px;
  z-index: 1;
  background-color: white;
  transform: translate(-50%, 0);

}

.dropdownItem {
  text-decoration: none;
  border-radius: 10px;
}

.dropdownItem:hover {
  text-decoration: none;
  background: #9ED6AD;
  color: black;
  transition: .7s;
}

.dropdown:hover .dropdownContent {
  display: block;
}

.navbar {
  background-color: white;
  border-radius: 10px;
}

#minimizableContent {
}

#dashboardContent {
  display: flex;

}

/* .marginRight {
  margin-right: 2px;
} */

.marginLeft {
  margin-left: 120px;
}

.mini{
  display:none;
}

.buttonImage {
  /* height: 40px; */
  width: 22px;
  margin: 0 auto;
}

.modal{
  display: flex;
  flex-direction: column;
  top: 5%;
  left: 50%;
  position: absolute;
  /* outline: 1px solid black; */
  filter: drop-shadow(2px 2px 4px #d0d0d2);
  transform: translate(-50%, 0);
  background: white;
  text-align: left;
  justify-content: center;
  align-items: center;
  border-radius: 7px;
  padding: 10px;
  z-index: 5;
  min-width: 300px;
  max-width: 350px;
}

.error {
  color: red;
  font-size: small;
}

.functionalButton{
  background-color: #f5f5f5;
  color: #606060;
  border-radius: 5px;
  text-align: center;
  height: 40px;
  min-width: 40px;
  border: none;
  padding: 5px;
  margin-right: 10px;
  text-transform: uppercase;
  font-size: 10px;
}

.functionalButton:hover{
  background-color: #E9E9E9;
  color: #606060;
}

.buttonCluster {
  display: flex;
  /* flex-direction: row-reverse; */
  justify-content: space-between;
  /* margin-top: 10px; */
}

.closeButton {
  position: absolute; 
  cursor: pointer; 
  user-select: none; 
  right: 7px; 
  top: 7px;
  width: 30px; 
  height: 30px;
  line-height: 0px;
}

#rowDiv {
  /* display: flex; */
}

input{
  border-radius: 5px;
}

.giveMeSpace{
  margin-top: 15px;
  margin-bottom: 10px;
  padding: 20px;
  line-height: 0px;
  background-color: #158C8C;
  color: #ffffff;
  /* text-transform: uppercase; */
  /* letter-spacing: 1px; */
}
.giveMeSpace:hover {
  background-color: #0E6B6B;
  color: #ffffff;
}

.noPointers{
  pointer-events: none;
}

.minimize {
  display: inline;
}

.modalLogo{
  max-width: 40px;
  max-height: 40px;
}

#logo {
  width: 45px;
  padding-right: 10px;
}

#app {
  /* //@errorfont-family: Avenir, Helvetica, Arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale; */
  text-align: center;
  color: #2c3e50;
}

nav {
  padding: 30px;
  
}

.router-link-exact-active a {
  color: #158C8C;
}

nav a {
  font-weight: bold;
  color: #2c3e50;
}

/* Optional: Makes the sample page fill the window. */
html,
body {
  height: 100%;
  width: 100%;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

#floating-panel {
  position: absolute;
  top: 25px;
  left: 200px;
  z-index: 5;
  padding: 10px;
  border: none;
  text-align: left;
  font-family: "Roboto", "sans-serif";
  line-height: 30px;
  cursor: move;
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
}

#goToLocationInput {
  height: 40px;
  background-color: #f5f5f5;
  border: none;
  padding-left: 10px;
  min-width: 300px;
  color: #606060;
  margin-right: 10px;
}

.inputBox {
  height: 40px;
  background-color: #f5f5f5;
  border: none;
  padding-left: 10px;
  /* min-width: 300px; */
  color: #606060;
  margin-right: 10px;
}

.form-control {
  height: 40px;
  background-color: #f5f5f5;
  border: none;
  padding-left: 10px;
  min-width: 250px;
}

#warnings-panel {
  width: 100%;
  height: 10%;
  text-align: center;
}

#languageSelect {
  border: none;
  background-color: #f5f5f5;
}

.internalLink {
  color: #158C8C;
}


label {
  text-transform: uppercase;
  font-size: 11px;
  letter-spacing: 1px;
  text-align: left;
  color: #BAB9B9;
}

.miniLabel {
  text-transform: uppercase;
  font-size: 9px;
  letter-spacing: 1px;
  line-height: 0px;
  text-align: left;
  color: #a1a0a0;

}

.info {
  max-width: 80%;
}

#goToLocationButton {
  /* line-height: 0px; */
  background-color: #158C8C;
  color: #ffffff;
}

#goToLocationButton:hover {
  background-color: #0E6B6B;
  color: #ffffff;
}

#threeDotsButton {

}

.dropdownItem {
  height: 50px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.dropdownItem:hover {
  background-color: #E6E6E6!important;
}



body{
  font-family: "Roboto", "sans-serif";
  color: #606060;
}

p {
  font-size: 12px;
}


#infoPanel {
  text-align: left;
  padding: 15px;
}

#fromLocationInfo {
  margin-bottom: 10px;
  /* font-size: 24px; */
  /* text-align: left; */
}

#toLocationInfo {
  margin-bottom: 10px;
}

#fromLocationInfoReturn {
  margin-bottom: 10px;
}

#toLocationInfoReturn {
  margin-bottom: 10px;
}



.likeImg {
  height: 10px;
  width: 10px;
}

.likeButton {
  border: none;
  background-color: white;
  border-radius: 4px;
  padding: 10px;
  float: left
}

.editButton {
  border: none;
  background-color: white;
  border-radius: 4px;
  float: right;
}

.reviewInfo {
  width: 100%;
}

.editButton:hover {
  background-color: #a39dfb;
}

.likeButton:hover {
  background-color: #158C8C;
}

.dislikeButton:hover {
  background-color: #F05D20;
}

.active {
  background-color: #a39dfb;
}

.activeDislike {
  background-color: #F05D20;
}

.reviewInfo {
  float: left;
}

h2 {
  /* font-size: 24px; */
  /* line-height: 24px; */
  font-weight: 300;
  margin: 0;
}

.timeDisplay {
  display: flex;
  flex-direction: column;
  margin-right: 15px;
}


#outboundInfo {
  flex: 50%; 
  /* border-bottom: solid;  */
  margin-bottom: 25px;
}

#returnInfo {
  margin-bottom: 15px;
}

.popUpInfo {
  display: flex;
  background-color: #F5F5F5;
  padding: 10px;
}

.timetableItem {
  margin-right: 10px;
  font-size: 22px;
}

.gm-ui-hover-effect {
  width: 40px!important;
  height: 40px!important;
}


@media only screen and (max-width: 480px) {
  #floating-panel {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 5;
    width: 100%;
    /* height: 200px; */
    padding: 10px;
    border: none;
    text-align: left;
    font-family: "Roboto", "sans-serif";
    line-height: 30px;
    display: flex;
    align-items: flex-start;
    justify-content: space-between;
    flex-direction: column;
    border-radius: 0;
  }

  #dashboardContent {
    flex-direction: column;
  }

  #profileButton {
    display: flex!important;
    align-items: center;
  }
  
  .functionalButton {
    /* margin-bottom: 10px; */
  }

  .buttonCluster {
    display: flex;
    flex-direction: row-reverse;
    justify-content: space-between;
    margin-top: 10px;
  }

  #goToLocationButton {
    margin-top: 10px;
  }

  #logo {
    margin-bottom: 10px;
  }

  #app {
    overflow: hidden;
  }
}

